--- a/grupo/Sites/css/acessos.css
+++ b/grupo/Sites/css/acessos.css
@@ -195,3 +195,94 @@ input {
 .links-uteis .a-senha {
     text-decoration: underline;
 }
+/* fim tela login */
+
+/* tela cadastro numero 1*/
+
+.forms-cadastro h1{
+    font-size: 44px;
+    font-weight: 100;
+    text-align: center;
+}   
+
+.fase1{
+    display: flex;
+    background-color: var(--roxo-2);
+    color: #FFFFFF;
+    font-size: 20px;
+    height: 6vh;
+    width: 3vw;
+    border-radius: 100px;
+    justify-content: center;
+    align-items: center;
+}
+
+.fase2{
+    display: flex;
+    background-color: #FFFFFF;
+    color: var(--roxo-2);
+    font-size: 20px;
+    height: 6vh;
+    width: 3vw;
+    border-radius: 100px;
+    justify-content: center;
+    align-items: center;
+    border: solid;
+}
+
+.cadastro {
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.forms-cadastro label {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-size: 20px;
+    /* background-color: #5996B6; */
+    margin-bottom: 3vh;
+}
+
+.enviar-cadastro{
+    width: 100%;
+    height: 45px;
+    font-size: 25px;
+    font-weight: 100;
+    color: var(--roxo-2);
+    border: solid 2px var(--roxo-2);
+    border-radius: 5px;
+    background-color: var(--roxo-2);
+    transition: background-color 0.7s;
+    color: #FFFFFF;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.links-uteis-cadastro {
+    margin-top: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding-bottom: 2vh;
+}
+
+.links-uteis-cadastro a {
+    color: black;
+    text-decoration: none;
+    margin: 5px;
+}
+
+.links-uteis-cadastro span {
+    color: var(--roxo-2);
+    font-weight: 600;
+}
+
+.enviar-cadastro:hover {
+    background-color:#8400ff;
+}
+
+/* FIM TELA DE CADASTRO*/
