--- a/grupo/Sites/css/acessos.css
+++ b/grupo/Sites/css/acessos.css
@@ -12,276 +12,324 @@
 :root {
     --roxo-fundo: #420F65;
     --roxo-2: #A70FFF;
+    --roxo-3: #8f20cf;
     --branco-fundo: #FFFFFF;
-    --tamanho-vw-banner: 55%
+    --cinza: #D9D9D9;
+    --cor-input: #D9D9D9;
+    --cinza-2: #c4c4c4;
+    --tamanho-vw-banner: 55%;
 }
 
 body {
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: 'Poppins', sans-serif;
-
+    overflow-x: hidden;
 }
 
 .container {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+
+.container-img {
+    width: 45%;
+    height: 100%;
+    background-color: var(--roxo-2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0% 5%;
+}
+
+.container-img img {
+    width: 600px;
+}
+
+.container-forms {
+    width: 55%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1% 3%;
 }
 
-/* banner colorido */
-.banner {
-    width: var(--tamanho-vw-banner);
-    height: 100%;
-    background-color: var(--roxo-fundo);
-}
-
-.luzes {
-    width: 100%;
-    height: 100%;
+.container-forms .topo {
     display: flex;
-    z-index: -1;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.efeito1 {
-    background-color: #5996B6;
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    margin-bottom: 20vh;
-    filter: blur(100px);
-    align-self: flex-end;
+.container-forms .topo h1 {
+    font-weight: 400;
 }
 
-.efeito2 {
-    background-color: #A70FFF;
-    width: 300px;
-    height: 300px;
-    border-radius: 0 0vw 100% 0px;
-    filter: blur(120px);
+/*Linha de baixo do titulo*/
+.container-forms .topo h1::after {
+    content: '';
+    display: block;
+    width: 6rem;
+    height: 0.3rem;
+    /*rem é uma medida igual a vw ou px, mas tem suas propriedades*/
+    background-color: var(--roxo-2);
+}
+
+.logo {
+    width: 80px;
     margin-right: 50px;
 }
 
-.efeito3 {
-    background-color: #B6AA59;
-    width: 150px;
-    height: 150px;
-    border-radius: 100% 100%;
-    filter: blur(80px);
-    opacity: 75%;
-    margin-top: 20%;
-    margin-left: 15%;
+.outros-links {
+    text-align: center;
+    padding-bottom: 2vh;
 }
 
-.efeito4 {
-    background-color: #E30FFF;
-    width: 150px;
-    height: 150px;
-    border-radius: 100% 0 0 0;
-    filter: blur(100px);
-    align-self: flex-end;
+.outros-links a {
+    color: #000;
+    text-decoration: none;
 }
 
-.frase-banner {
-    width: var(--tamanho-vw-banner);
+.outros-links a>span {
+    color: var(--roxo-2);
+    font-weight: 500;
+}
+
+.outros-links .senha-link {
+    text-decoration: underline;
+}
+
+/*Partes do formulario que mexem*/
+.div-forms-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.div-forms-login label {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+}
+
+.div-forms-login input {
+    width: 100%;
+    height: 6vh;
+    padding: 1% 2%;
+    margin-bottom: 2vh;
+    margin-top: 0.5vh;
+    border-radius: 5px;
+    border: solid 1px;
+    font-size: 18px;
+}
+
+.div-forms-login span {
+    font-size: 22px;
+    font-weight: 400;
+}
+
+
+/* Cadastro*/
+.sub-topo {
+    display: flex;
+    margin-top: 0;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sub-topo h2 {
+    margin: 0;
+    font-size: 25px;
+    font-weight: 500;
+}
+
+.progresso {
+    width: 200px;
     height: 100%;
     display: flex;
-    position: absolute;
+    align-items: center;
+    justify-content: center;
+}
+
+.progresso .bolinha {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: var(--cinza);
+    z-index: 1;
+}
+
+.progresso .linha {
+    width: 30px;
+    height: 4px;
+    margin: 0 -2px;
+    background-color: var(--cinza);
+}
+
+.progresso .ativo {
+    background-color: var(--roxo-2);
+}
+
+.div-forms-cad {
+    width: 100%;
+    height: 100%;
+    padding: 2vh 0;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    color: white;
-    padding: 0px 150px;
-    text-align: center;
 }
 
-.frase-banner h1 {
-    font-size: 44px;
-    filter: drop-shadow(0px 4px 10px #9915FF);
-}
-
-.frase-banner h2 {
-    margin: 5px;
-    font-size: 20px;
-    font-weight: 100;
-}
-
-
-.formularios {
-    z-index: 1;
-    width: 45%;
-    height: 100%;
-    background-color: var(--branco-fundo);
-    padding: 0px 6vw;
-}
-
-.forms {
+.linha-input {
+    display: flex;
     width: 100%;
-    height: 100%;
+    height: auto;
+    justify-content: space-between;
+    margin-bottom: 1vh;
+}
+
+.linha-input label {
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
-.forms-login {
-    padding-top: 30%;
-}
-
-.forms h1 {
-    font-size: 44px;
-    font-weight: 100;
-}
-
-.forms label {
-    display: flex;
-    flex-direction: column;
+.linha-input label>input,
+.linha-input label>select {
     width: 100%;
-    font-size: 25px;
-    /* background-color: #5996B6; */
-    margin-bottom: 3vh;
-}
-
-input {
-    width: 100%;
-    height: 50px;
-    border-radius: 3px;
-    font-size: 20px;
-    font-weight: 100;
+    height: 5vh;
+    background-color: var(--cor-input);
+    border: none;
+    border-radius: 5px;
     padding: 0px 5px;
 }
 
-.enviar {
+.linha-input label>input:hover,
+.linha-input label>select:hover{
+    background-color: var(--cinza-2);
+}
+
+/*Tamanhos para os input*/
+.w-100 {
     width: 100%;
-    height: 50px;
-    font-size: 25px;
-    font-weight: 100;
+}
+
+.w-60 {
+    width: 60%;
+}
+
+.w-50 {
+    width: 49%;
+}
+
+.w-40 {
+    width: 38%;
+}
+
+.w-33 {
+    width: 32%;
+}
+
+.w-25 {
+    width: 21%;
+}
+
+.w-0 {
+    display: none;
+}
+
+
+/*Btn*/
+
+.btn-login {
+    width: 75%;
+    height: 6vh;
+    background-color: transparent;
     color: var(--roxo-2);
+    font-size: 22px;
     border: solid 2px var(--roxo-2);
     border-radius: 5px;
-    background-color: transparent;
-    transition: background-color 0.7s;
+    transition: 0.2s;
     margin-bottom: 2vh;
 }
 
-.enviar:hover {
-    background-color: #a70fff26;
+/*efeito do botão*/
+
+.btn-login:hover {
+    background-color: var(--roxo-2);
+    color: #fff;
     cursor: pointer;
 }
 
-.links-uteis {
-    margin-top: 15vh;
+.btn-google {
+    width: 30%;
+    height: 40px;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
     align-items: center;
-    padding-bottom: 2vh;
+    justify-content: space-evenly;
+    font-size: 15px;
+    background-color: #fff;
+    border: none;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.193);
+    transition: 0.2s;
 }
 
-.links-uteis a {
-    color: black;
-    text-decoration: none;
-    margin: 5px;
+.btn-google img {
+    width: 25px;
 }
 
-.links-uteis span {
-    color: var(--roxo-2);
-    font-weight: 600;
+.btn-google:hover {
+    background-color: #ebebeb;
+    cursor: pointer;
 }
 
-.links-uteis .a-senha {
-    text-decoration: underline;
-}
-/* fim tela login */
-
-/* tela cadastro numero 1*/
-
-.forms-cadastro h1{
-    font-size: 44px;
-    font-weight: 100;
-    text-align: center;
-}   
-
-.fase1{
-    display: flex;
+.btn-etapa {
+    width: 20%;
+    height: 6vh;
+    color: #fff;
     background-color: var(--roxo-2);
-    color: #FFFFFF;
-    font-size: 20px;
-    height: 6vh;
-    width: 3vw;
-    border-radius: 100px;
-    justify-content: center;
-    align-items: center;
-}
-
-.fase2{
-    display: flex;
-    background-color: #FFFFFF;
-    color: var(--roxo-2);
-    font-size: 20px;
-    height: 6vh;
-    width: 3vw;
-    border-radius: 100px;
-    justify-content: center;
-    align-items: center;
-    border: solid;
-}
-
-.cadastro {
-    margin: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.forms-cadastro label {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    font-size: 20px;
-    /* background-color: #5996B6; */
-    margin-bottom: 3vh;
-}
-
-.enviar-cadastro{
-    width: 100%;
-    height: 45px;
-    font-size: 25px;
-    font-weight: 100;
-    color: var(--roxo-2);
-    border: solid 2px var(--roxo-2);
+    border: none;
+    font-size: 22px;
     border-radius: 5px;
-    background-color: var(--roxo-2);
-    transition: background-color 0.7s;
-    color: #FFFFFF;
+    transition: 0.2s;
+    margin: 0 2vw;
+}
+
+.btn-etapa:hover {
+    background-color: var(--roxo-3);
     cursor: pointer;
-    transition: 0.5s;
 }
 
-.links-uteis-cadastro {
-    margin-top: 15vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    padding-bottom: 2vh;
-}
-
-.links-uteis-cadastro a {
-    color: black;
-    text-decoration: none;
-    margin: 5px;
-}
-
-.links-uteis-cadastro span {
+.btn-cadastrar {
+    width: 20%;
+    height: 6vh;
+    background-color: transparent;
     color: var(--roxo-2);
-    font-weight: 600;
+    font-size: 22px;
+    border: solid 2px var(--roxo-2);
+    font-size: 22px;
+    border-radius: 5px;
+    transition: 0.2s;
+    margin: 0 2vw;
 }
 
-.enviar-cadastro:hover {
-    background-color:#8400ff;
+.btn-cadastrar:hover {
+    background-color: var(--roxo-2);
+    color: #fff;
+    cursor: pointer;
 }
 
-/* FIM TELA DE CADASTRO*/
+/*Display*/
+#login{
+    display: flex;
+}
+#cad_1{
+    display: flex;
+}
+#cad_2{
+    display: none;
+}
+#cad_3{
+    display: none;
+}
