--- a/grupo/Sites/Dash/style.css
+++ b/grupo/Sites/Dash/style.css
@@ -1,50 +1,193 @@
-:root{
+:root {
     --branco: #fff;
     --fundo: #efefef;
     --roxo: #7712C4;
     --roxo-claro: #A70FFF;
+    --azul: #7CF8E5;
+    --modal: #ebebeb;
+    --modal-kpi: #3a3a3a;
 }
 
-body{
+body {
     display: flex;
     overflow-x: hidden;
     margin: 0;
     background-color: var(--fundo);
 }
-.div-pai{
+
+.div-pai {
     display: flex;
     width: 100%;
 }
-.container-lateral{
-    background-color: rgb(255, 255, 255);
-    height: 100vh;
+
+.container-lateral {
+    height: 100%;
     width: 20%;
-    position: fixed;
-    align-self: start;
-    justify-self: start;
 }
-.container-principal{
+
+.menu-lateral {
+    background-color: var(--branco);
+    height: 100%;
+    width: 20%;
+    display: flex;
+    position: fixed;
+    flex-direction: column;
+    align-items: center;
+    padding: 2% 0%;
+}
+
+.menu-lateral .topo {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu-lateral .logo {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-bottom: 2px solid var(--roxo-claro);
+    margin-bottom: 20px;
+}
+
+.menu-lateral h2 {
+    text-align: center;
+    margin: 0;
+    color: var(--azul);
+}
+
+.menu-lateral h2 span {
+    color: var(--roxo-claro);
+}
+
+.menu-lateral a {
+    text-decoration: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.menu-lateral .links {
+    width: 83%;
+    height: 40px;
+    border-radius: 5px;
+    padding: 0% 3%;
+    margin-bottom: 1vh;
+    transition: 0.5s;
+}
+
+.menu-lateral .links-ativo {
+    background-color: var(--roxo-claro);
+}
+
+.menu-lateral .links:hover {
+    background-color: var(--fundo);
+}
+
+.menu-lateral .links-ativo:hover {
+    background-color: var(--roxo);
+}
+
+.menu-lateral .links a {
+    color: #000;
+}
+
+.menu-lateral .links-ativo a {
+    color: #FFF;
+}
+
+.menu-lateral .sair {
+    width: 83%;
+    height: 40px;
+    border-radius: 5px;
+    padding: 0% 3%;
+    margin-bottom: 1vh;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-lateral .sair a {
+    color: #FF5E5E;
+    justify-content: space-around;
+}
+
+
+.container-principal {
     display: flex;
     flex-direction: column;
     width: 80%;
     justify-content: flex-end;
-    margin-left: 20%;
 }
-nav{
+
+nav {
     display: flex;
     width: 100%;
     height: 200px;
     background-color: var(--roxo-claro);
-    flex-direction: column;
     color: white;
-    justify-content: center;
-    /* padding: 20px; */
+    padding: 0% 2%;
+}
 
+nav .empresa {
+    width: 50%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
 }
-nav span{
+
+
+
+nav .empresa p {
+    font-size: 22px;
+    margin: 0;
+}
+
+
+nav .empresa span {
     color: #7CF8E5;
+    font-size: 26px;
+    font-weight: 500;
 }
-.container{
+
+
+nav .funcionario {
+    width: 50%;
+    height: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding: 0% 10%;
+}
+
+nav .funcionario div {
+    padding: 0% 1%;
+}
+
+nav .funcionario img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+nav .funcionario p {
+    font-size: 22px;
+    margin: 0;
+    font-weight: 300;
+    text-align: center;
+}
+
+
+.container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -52,20 +195,23 @@ nav span{
     padding: 0% 2%;
     justify-content: space-evenly;
 }
-.container1{
+
+.container1 {
     margin-top: -30px;
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 50%;
 }
-.container2{
+
+.container2 {
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 50%;
 }
-.select{
+
+.select {
     display: flex;
     width: 100%;
     align-items: center;
@@ -73,13 +219,15 @@ nav span{
     text-align: center;
     color: white;
 }
-select{
+
+select {
     background-color: #7712C4;
     width: 150px;
     margin-top: -20px;
     color: var(--branco);
 }
-.kpis-container{
+
+.kpis-container {
     background-color: var(--branco);
     display: flex;
     flex-wrap: wrap;
@@ -89,7 +237,8 @@ select{
     height: 375px;
     border-radius: 10px;
 }
-.grafico-principal{
+
+.grafico-principal {
     width: 60%;
     height: 100%;
     border-radius: 10px;
@@ -98,7 +247,8 @@ select{
     align-items: center;
     justify-content: center;
 }
-.grafico-secundario{
+
+.grafico-secundario {
     width: 42%;
     border-radius: 10px;
     background-color: var(--branco);
@@ -108,7 +258,8 @@ select{
     height: 375px;
     border-radius: 10px;
 }
-.grafico-terciario{
+
+.grafico-terciario {
     width: 30%;
     border-radius: 10px;
     background-color: var(--branco);
@@ -116,11 +267,13 @@ select{
     align-items: center;
     justify-content: center;
 }
-canvas{
+
+canvas {
     width: 50%;
     margin: 0px 5px;
 }
-.box{
+
+.box {
     background-color: var(--roxo-claro);
     border-radius: 10px;
     width: 250px;
@@ -131,7 +284,166 @@ canvas{
     padding: 10px;
     text-align: center;
 }
-.box b{
+
+.box b {
     font-size: 30px;
 
+}
+
+
+/* dashboard -Tanque */
+.container-tanque {
+    width: 80%;
+    height: 100vh;
+    background-color: rgb(220, 220, 220);
+}
+
+.container-cards-tanque {
+    display: flex;
+    width: 100%;
+    height: 70%;
+    padding: 1%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.card {
+    width: 400px;
+    height: 225px;
+    display: flex;
+    flex-direction: column;
+    padding: 1%;
+    border-radius: 10px;
+    background-color: #ffffff;
+    transition: 0.4s;
+}
+.card:hover {
+    cursor: pointer;
+    background-color: var(--roxo-claro);
+}
+
+.card .titulos {
+    display: flex;
+    border-bottom: solid 2px black;
+}
+
+.card .infos {
+    width: 70%;
+}
+
+.card .infos p {
+    margin: 0;
+}
+
+.card .nome {
+    font-size: 24px;
+    font-weight: 500px;
+}
+
+.card .setor {
+    font-size: 20px;
+    font-weight: 300px;
+}
+
+.card .logo {
+    display: flex;
+    width: 30%;
+    align-items: center;
+    justify-content: end;
+}
+
+.card .logo img {
+    width: 50px;
+    height: 50px;
+}
+
+.card .configs {
+    margin: 0;
+}
+
+.card .configs p {
+    font-size: 16px;
+    padding: 5px;
+    margin: 0;
+}
+
+.card .alertas {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+
+}
+
+.roxo {
+    color: rgb(2, 255, 86);
+    font-weight: 400;
+}
+
+.modal-container {
+    display: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(6, 6, 6, 0.76);
+    z-index: 999;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-tanque {
+    width: 65%;
+    height: 75%;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 1% 2%;
+}
+
+.topo-modal {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.topo-modal .sair:hover{
+    cursor: pointer;
+}
+
+.topo-modal .sair img {
+    width: 30px;
+    height: 30px;
+}
+
+.topo-modal h1 {
+    font-weight: 200px;
+
+}
+
+.topo-modal .logo img {
+    width: 60px;
+    height: 60px;
+}
+.meio-modal{
+    width: 100%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.graficos-modal{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.grafico-modal{
+    background-color: var(--modal);
+}
+
+.kpis-modal{
+    display: flex;
+}
+.kpis-modal .box{
+    height: 80px;
+    background-color: var(--modal-kpi);
+    border-radius: 10px;
 }
