--- a/grupo/Simulador Financeiro/style.css
+++ b/grupo/Simulador Financeiro/style.css
@@ -247,6 +247,7 @@ select {
     background-color: var(--bg-roxo-escuro);
     flex-direction: column;
     padding: 20px;
+    align-items: center;
 }
 
 .resultado {
@@ -271,6 +272,11 @@ h3 {
     padding: 5px 20px;
 }
 
+.tela-resultado img {
+    width: 500px;
+    height: 500px;
+}
+
 .tela-comparar {
     position: absolute;
     backdrop-filter: blur(10px);
@@ -279,48 +285,56 @@ h3 {
     align-items: center;
     justify-content: center;
 }
-.caixa{
+
+.caixa {
     display: flex;
     text-align: center;
     justify-content: flex-end;
     align-items: flex-start;
 }
-.div_comparar{
+
+.div_comparar {
     display: flex;
-    background-color: var(--fundo);
+    background-color: var(--bg-branco);
     width: 800px;
-    height: 400px;
+    height: 450px;
     border-radius: 5px;
     border: 2px solid;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-.caixa img{
+
+.caixa img {
     position: absolute;
     width: 25px;
     height: 25px;
-    margin: 8px 8px;
+    margin-right: 30px;
+    margin-top: 30px;
     cursor: pointer;
 }
-.comparar{
+
+.comparar {
     display: flex;
     width: 50%;
     height: 100%;
     flex-direction: column;
     justify-content: center;
-    padding: 30px;
+    padding: 20px;
 }
-.comparacao{
+
+.comparacao {
     display: flex;
     flex-direction: row;
+    width: 100%;
 }
+
 .div-final {
     display: flex;
     flex-direction: column;
 }
-.div_sensor{
+
+.div_sensor {
     font-size: large;
-    color: green;
     margin: 10px 10px;
 }
