--- a/grupo/Sites/public/css/acessos.css
+++ b/grupo/Sites/public/css/acessos.css
@@ -57,6 +57,26 @@ body {
     padding: 1% 3%;
 }
 
+#cad_1_pt2{
+    display: flex;
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(1.2px);
+}
+
+.modal_cad_1{
+    width: 50%;
+    height: 30%;
+    background-color: var(--cinza-2);
+    text-align: center;
+    align-content: center;
+    border-radius: 5px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6);
+}
+
 .container-forms .topo {
     display: flex;
     justify-content: space-between;
