--- a/grupo/Sites/public/Dash/style.css
+++ b/grupo/Sites/public/Dash/style.css
@@ -143,12 +143,10 @@ body {
     justify-content: flex-end;
 }
 
-
-
 nav {
     display: flex;
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: var(--roxo-claro);
     color: white;
     padding: 0% 2%;
@@ -161,7 +159,6 @@ nav .empresa {
     flex-direction: column;
     justify-content: end;
 }
-
 
 
 nav .empresa p {
@@ -204,112 +201,8 @@ nav .funcionario p {
     text-align: center;
 }
 
-
-.container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 50%;
-    padding: 0% 2%;
-    justify-content: space-evenly;
-}
-
-.container1 {
-    margin-top: -30px;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 50%;
-}
-
-.container2 {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 50%;
-}
-
-.select {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
-}
-
-select {
-    background-color: #7712C4;
-    width: 150px;
-    margin-top: -20px;
-    color: var(--branco);
-}
-
-.kpis-container {
-    background-color: var(--branco);
-    display: flex;
-    flex-wrap: wrap;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
-    height: 375px;
-    border-radius: 10px;
-}
-
-.grafico-principal {
-    width: 60%;
-    height: 100%;
-    border-radius: 10px;
-    background-color: var(--branco);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.grafico-secundario {
-    width: 42%;
-    border-radius: 10px;
-    background-color: var(--branco);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 375px;
-    border-radius: 10px;
-}
-
-.grafico-terciario {
-    width: 30%;
-    border-radius: 10px;
-    background-color: var(--branco);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-canvas {
-    width: 50%;
-    margin: 0px 5px;
-}
-
-.box {
-    background-color: var(--roxo-claro);
-    border-radius: 10px;
-    width: 250px;
-    height: 125px;
-    border-radius: 30px;
-    color: white;
-    margin: 10px 10px;
-    padding: 10px;
-    text-align: center;
-}
-
-.box b {
-    font-size: 30px;
-
-}
-
 /*Dash v2*/
-.container-kpi{
+.container-kpi {
     width: 100%;
     height: 150px;
     margin-top: 2vh;
@@ -317,7 +210,8 @@ canvas {
     align-items: center;
     justify-content: space-evenly;
 }
-.container-kpi .kpis{
+
+.container-kpi .kpis {
     width: 250px;
     height: 100%;
     border-radius: 10px;
@@ -328,12 +222,14 @@ canvas {
     background-color: var(--modal-kpi);
     color: white;
 }
-.container-kpi .kpis .titulo{
+
+.container-kpi .kpis .titulo {
     margin: 0;
     border-bottom: solid 1px;
     width: 100%;
 }
-.container-kpi .kpis .dados{
+
+.container-kpi .kpis .dados {
     margin: 0;
     width: 100%;
     height: 60%;
@@ -341,27 +237,29 @@ canvas {
     align-items: center;
     justify-content: center;
 }
-.container-kpi h3{
+
+.container-kpi h3 {
     margin: 10px;
 }
 
-.container-kpi h1{
+.container-kpi h1 {
     margin: 0;
     font-size: 50px;
 }
 
-.container-grafico{
-    width: 100%;
-    height: 400px;
+.container-grafico {
+    display: flex;
+    justify-content: center;
     padding: 10px 20px;
     margin-bottom: 3vh;
 }
-.container-grafico .graf{
-    width: 95%;
-    height: 100%;
-    background-color: #797979;
-    padding: 10px;
-    border-radius: 10px;
+.grafico {
+    display: block;
+}
+
+#grafico{
+    width: 700px;
+    height: 350px;
 }
 
 /* dashboard -Tanque */
@@ -650,12 +548,14 @@ canvas {
     font-size: 17px;
     margin: 0;
 }
-.modal-alerta .img{
+
+.modal-alerta .img {
     width: 40%;
     display: flex;
     justify-content: center;
 }
-.modal-alerta img{
-     width: 75px;
-     height: 75px;
+
+.modal-alerta img {
+    width: 75px;
+    height: 75px;
 }
