--- a/grupo/Sites/public/css/admin.css
+++ b/grupo/Sites/public/css/admin.css
@@ -23,7 +23,7 @@ html {
 body {
     margin: 0;
     overflow-x: hidden;
-    background-color: #fcf9f4;
+    background-color: #dfdfdf;
 }
 
 .container-area {
@@ -36,6 +36,7 @@ body {
 .container-area .menu-lateral {
     width: 20%;
     height: 100vh;
+    display: flex;
     position: sticky;
     top: 0;
     background-color: #6400a6;
@@ -88,46 +89,75 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    border: solid 1px black;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    background-color: white;
+    transition: .5s;
 }
 
-.container .area-cards .card a {
+.container .area-cards .card .tipo-card {
     width: 100%;
     height: 100%;
     text-decoration: none;
-}
-
-.jira {
     display: flex;
-    flex-direction: row;
-    color: rgb(34, 34, 255);
+    flex-direction: column;
+    padding: 8% 3%;
 }
 
-.jira .icons,
-.jira .infos {
+.container .card .titulo {
+    border-bottom: solid 2px black;
+    font-size: 20px;
+}
+
+.container .card .infos {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: space-evenly;
 }
 
-.jira .infos {
-    background-color: rgba(213, 213, 213, 0.99);
+.container .card .infos img {
+    max-width: 90%;
+    max-height: 140px;
 }
 
-.jira .icons {
-    /* background-image: url(../src/jira.png); */
-    background-size: 200px;
-    background-position-y: center;
-    background-color: rgba(33, 33, 255, 0.841);
+.card .jira {
+    color: #001eff;
 }
 
-
-.jira .icons img {
-    width: 50%;
-
+.area-cards .jira-card:hover {
+    scale: 1.02;
+    background-color: #b4bcff;
 }
+
+.card .trello {
+    color: #9000ff;
+}
+
+.card .trello .infos img {
+    max-height: 80px;
+}
+
+.card .empresas .infos img {
+    max-height: 90px;
+}
+
+.area-cards .trello-card:hover {
+    scale: 1.02;
+    background-color: #ddb4ff;
+}
+
+.card .tanque {
+    color: #000000;
+}
+
+.area-cards .tanque-card:hover {
+    scale: 1.02;
+    background-color: #cdcdcd;
+    cursor: pointer;
+}
+
 
 .bob {
     position: absolute;
@@ -268,4 +298,159 @@ body {
 .bob .chat .area-ipt .ipt img {
     width: 20px;
     cursor: pointer;
+}
+
+
+/*Modal*/
+.area-modal {
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.568);
+}
+
+.modal {
+    width: 900px;
+    height: 450px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    display: flex;
+    overflow: hidden;
+    padding: 1% 1%;
+}
+
+.modal-empresa {
+    flex-direction: column;
+}
+
+.modal .ipts {
+    width: 60%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.modal .titulo-modal {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    justify-content: start;
+}
+
+.modal .titulo-modal img {
+    width: 30px;
+    transition: .5s;
+}
+
+.modal .titulo-modal img:hover {
+    scale: 1.1;
+    cursor: pointer;
+}
+
+.modal .titulo-modal h1 {
+    width: 100%;
+    text-align: center;
+    margin: 0;
+}
+
+.modal .dados {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 70%;
+}
+
+.modal .dados .linha {
+    display: flex;
+    width: 100%;
+}
+
+.modal .dados label {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 10px;
+    font-size: 16px;
+}
+
+.modal .dados input {
+    background-color: #D9D9D9;
+    border: none;
+    border-radius: 3px;
+    height: 30px;
+    padding: 0% 2%;
+}
+
+.modal .enviar {
+    width: 100%;
+    height: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    padding: 1% 2%;
+}
+
+.modal .enviar button {
+    width: 150px;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    background-color: #9000ff;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    transition: .5s;
+}
+
+.modal .enviar button:hover {
+    background-color: #7700d2;
+    cursor: pointer;
+}
+
+.modal .img {
+    width: 40%;
+    height: 100%;
+    border-left: solid 2px black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2%;
+}
+
+.modal .img img {
+    width: 100%;
+}
+
+.modal .area-empresas{
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow-y: auto;
+}
+
+.modal table {
+    border: solid 2px black;
+    border-collapse: collapse;
+}
+
+.modal table th{
+    margin: 0;
+    border: solid 1px black;
+    text-align: left;
+    padding: 0% 3%;
+}
+.modal table td{
+    margin: 0;
+    border: solid 1px black;
+    padding: 0% 3%;
+}
+.modal table .l1{
+    background-color: rgb(239, 226, 255);
 }
