--- a/grupo/Sites/public/css/admin.css
+++ b/grupo/Sites/public/css/admin.css
@@ -4,16 +4,14 @@
 }
 
 :root {
-    /*variaves de cores*/
-    --bg-branco: #F4F5FF;
-    /*Branco meio roxo*/
-    --color-branco: #FFFFFF;
-    /*Branco para fonte*/
-    --bg-roxo: #A70FFF;
-    /*Roxo mais usado*/
-    --bg-roxo-escuro: #420E65;
-    /*Roxo escuro*/
-    --bg-roxo-nav: #420e65aa;
+    --branco: #fff;
+    --fundo: #efefef;
+    --roxo: #7712C4;
+    --roxo-claro: #A70FFF;
+    --azul: #7CF8E5;
+    --modal: #ebebeb;
+    --modal-kpi: #3a3a3a;
+    --card-selecionado: #a98cca;
 }
 
 html {
@@ -38,9 +36,120 @@ body {
     height: 100vh;
     display: flex;
     position: sticky;
+    flex-direction: column;
+    align-items: center;
+    padding: 2% 0% 0% 0%;
     top: 0;
-    background-color: #6400a6;
+    background-color: var(--branco);
 }
+
+.menu-lateral .topo {
+    width: 100%;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu-lateral .logo {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-bottom: 2px solid var(--roxo-claro);
+    margin-bottom: 20px;
+}
+
+.menu-lateral h2 {
+    text-align: center;
+    margin: 0;
+    color: var(--azul);
+}
+
+.menu-lateral h2 span {
+    color: var(--roxo-claro);
+}
+
+.menu-lateral a {
+    text-decoration: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.menu-lateral .links {
+    width: 83%;
+    height: 40px;
+    border-radius: 5px;
+    padding: 0% 3%;
+    margin-bottom: 1vh;
+    transition: 0.5s;
+}
+
+.menu-lateral .links-ativo {
+    background-color: var(--roxo-claro);
+}
+
+.menu-lateral .links:hover {
+    background-color: var(--fundo);
+}
+
+.menu-lateral .links-ativo:hover {
+    background-color: var(--roxo);
+}
+
+.menu-lateral .links a {
+    color: #000;
+}
+
+.menu-lateral .links-ativo a {
+    color: #FFF;
+}
+
+.menu-lateral .alerta {
+    margin-top: 20%;
+    background-color: red;
+    width: 90%;
+    height: 150px;
+    border-radius: 10px;
+    color: #fff;
+    text-align: center;
+}
+
+.menu-lateral .alerta p {
+    font-size: 18px;
+    margin: 10px;
+}
+
+.menu-lateral .sair {
+    width: 83%;
+    height: 40px;
+    border-radius: 5px;
+    padding: 0% 3%;
+    margin-bottom: 1vh;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-lateral .sair a {
+    color: #FF5E5E;
+    justify-content: space-around;
+}
+
+
+.container-principal {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    justify-content: flex-end;
+}
+
+
 
 .container-area .container {
     width: 80%;
@@ -57,7 +166,7 @@ body {
 
 .container .titulo div {
     padding: 0% 2%;
-    border-bottom: solid 5px var(--bg-roxo);
+    border-bottom: solid 5px var(--roxo-claro);
     font-size: 18px;
 }
 
