Deixando o gráfico do modal dinâmico

--- a/grupo/Sites/public/Dash/style.css
+++ b/grupo/Sites/public/Dash/style.css
@@ -273,6 +273,7 @@ nav .funcionario p {
     display: flex;
     width: auto;
     height: auto;
+    min-height: 80vh;
     padding: 1%;
     flex-wrap: wrap;
     justify-content: space-evenly;
