--- a/grupo/Sites/public/css/admin.css
+++ b/grupo/Sites/public/css/admin.css
@@ -395,7 +395,8 @@ body {
 
 .bob .chat .area-ipt .ipt {
     width: 100%;
-    height: 80%;
+    height: 90%;
+    padding: 2% 2%;
     border-radius: 5px;
     border: solid 1px;
     display: flex;
@@ -404,14 +405,29 @@ body {
 }
 
 .bob .chat .area-ipt .ipt input {
-    width: 85%;
+    width: 90%;
     height: 100%;
     border: none;
     background-color: transparent;
 }
 
+.bob .chat .area-ipt .ipt input:focus {
+    outline: none;
+}
+
+.bob .chat .area-ipt .ipt button {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    border: none;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    background-color: transparent;
+}
+
 .bob .chat .area-ipt .ipt img {
-    width: 20px;
+    width: 100%;
     cursor: pointer;
 }
 
